# peptide_opt

./: .dockerignore  .env  .env.example  .gitignore  000-install_guide  001-run.sh  1-model_peptide.sh  2-add_h.py  3-dock.sh  4-sort_atom.py  5-score.py  6-merge-peptide-protein.py  7-pmpnn.sh  8-final.py  FILE_UPLOAD_GUIDE.md  README.md  README_INTEGRATED.md  async_task_processor.py  client_example.py  config.ini  deploy  environment.yml  main.py  peptideH.pdbqt  peptide_1.out  peptide_10.out  peptide_2.out  peptide_3.out  peptide_4.out  peptide_5.out  peptide_6.out  peptide_7.out  peptide_8.out  peptide_9.out  peptide_optimizer.py  peptide_ranked_10_sorted_H.pdbqt  peptide_ranked_1_sorted_H.pdbqt  peptide_ranked_2_sorted_H.pdbqt  peptide_ranked_3_sorted_H.pdbqt  peptide_ranked_4_sorted_H.pdbqt  (+15 more)
cicd/: README.md
cicd/docker/: README.md  docker-compose.ci.yml
cicd/docs/: DEPLOYMENT_GUIDE.md
cicd/scripts/: deploy.sh  start_peptide_service.sh
config/: __init__.py  database_config.py  logging_config.py  settings.py
database/: __init__.py  db.py
docker/: .env.production  Dockerfile  docker-compose.gpu.yml  docker-compose.yml  docker-entrypoint.sh
docs/: DOCKER_BUILD_VERIFICATION.md  DOCKER_DEPLOYMENT.md  FILE_NAMING_REFERENCE.md  MIGRATION_PLAN.md  OmegaFold在5090适配实验过程.md  RESTRUCTURE.md  多用户并发任务处理的方案.md
input/: peptide.fasta
my_results/: result.csv
output/: result.csv
pmpnn/complex1/: parsed_pdbs.jsonl
pmpnn/complex1/seqs/: complex.fa
pmpnn/complex10/: parsed_pdbs.jsonl
pmpnn/complex10/seqs/: complex.fa
pmpnn/complex2/: parsed_pdbs.jsonl
pmpnn/complex2/seqs/: complex.fa
pmpnn/complex3/: parsed_pdbs.jsonl
pmpnn/complex3/seqs/: complex.fa
pmpnn/complex4/: parsed_pdbs.jsonl
pmpnn/complex4/seqs/: complex.fa
pmpnn/complex5/: parsed_pdbs.jsonl
pmpnn/complex5/seqs/: complex.fa
pmpnn/complex6/: parsed_pdbs.jsonl
pmpnn/complex6/seqs/: complex.fa
pmpnn/complex7/: assigned_pdbs.jsonl  parsed_pdbs.jsonl
pmpnn/complex7/seqs/: complex.fa
pmpnn/complex8/: parsed_pdbs.jsonl
pmpnn/complex8/seqs/: complex.fa
pmpnn/complex9/: parsed_pdbs.jsonl
pmpnn/complex9/seqs/: complex.fa
scripts/: docker-build.sh  docker-manage.sh  migrate-structure.sh
services/: __init__.py
services/storage/: __init__.py  seaweed_storage.py
src/peptide_opt/: __init__.py  __main__.py  cli.py
src/peptide_opt/api/: __init__.py  app.py  dependencies.py
src/peptide_opt/api/routes/: __init__.py  health.py
src/peptide_opt/config/: __init__.py  logging.py  settings.py  settings.yaml
src/peptide_opt/core/: __init__.py  optimizer.py  validators.py
src/peptide_opt/db/: __init__.py  postgres.py
src/peptide_opt/storage/: __init__.py  seaweed.py
src/peptide_opt/tasks/: __init__.py  processor.py
tests/: conftest.py  test5090.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_validators.py
