[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peptide-opt"
version = "1.0.0"
description = "Peptide structure optimization and sequence design service using ProteinMPNN and molecular docking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["peptide", "optimization", "protein", "mpnn", "docking", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "asyncpg>=0.28.0",
    "pyyaml>=6.0",
    "biopython>=1.81",
    "pandas>=2.0.0",
    "boto3>=1.28.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[project.scripts]
peptide-opt = "peptide_opt.__main__:main"
peptide-optimizer = "peptide_opt.cli:run_optimizer"

[project.urls]
Homepage = "https://github.com/yourusername/peptide-opt"
Documentation = "https://github.com/yourusername/peptide-opt#readme"
Repository = "https://github.com/yourusername/peptide-opt"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# Black 代码格式化配置
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | __pycache__
  | build
  | dist
  | vendor
)/
'''

# isort 导入排序配置
[tool.isort]
profile = "black"
line_length = 100
skip = ["vendor", ".venv", "__pycache__"]
known_first_party = ["peptide_opt"]

# Ruff 代码检查配置
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["vendor", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long, handled by black

# MyPy 类型检查配置
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["vendor", "build", "dist"]

# Pytest 配置
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/peptide_opt --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage 配置
[tool.coverage.run]
source = ["src/peptide_opt"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
